# hpcpm

./: .gitignore  .gitreview  CMakeLists.txt  Gruntfile.js  LICENSE  Makefile  api.conf.ini  bower.json  config.js  dev_requirements.txt  index.html  karma.conf.js  management.conf.ini  package.json  protractor.conf.js  pylintrc  readme.md  requirements.txt  server.js  setup.py
api/: Makefile  api.conf.ini  dev_requirements.txt  pylintrc  requirements.txt
api/hpcpm/api/: __init__.py
api/hpcpm/api/helpers/: constants.py  database.py
api/hpcpm/api/resources/: ApiSpec.py
api/tests/: test_main.py
backend/: readme.md
backend/res/: backend.cfg  logging.cfg
backend/src/core/: Core.cpp
backend/src/core/queries/: GetPowerLimitConstraintsQuery.hpp  GetPowerLimitPercentageQuery.hpp  GetPowerLimitQuery.hpp  Query.hpp  QueryFactory.hpp  RemovePowerLimitQuery.hpp  SetPowerLimitQuery.hpp
backend/src/devices/: DeviceInformation.hpp  DevicesManager.hpp
backend/src/devices/IntelXeon/: MockNMPRKCommunicationProvider.hpp  NMPRKCommunicationProvider.cpp
backend/src/network/: RequestListener.cpp  cpprest.hpp
backend/src/utility/: ArgsParser.cpp  ConfigLoader.hpp  Functional.cpp  Functional.hpp  Option.cpp  Validators.cpp  Validators.hpp  make_unique.hpp
backend/test/: AllTests.cpp
backend/test/core/: ArgsParserTests.cpp  QueryExecutorTests.cpp
backend/test/network/: CpprestTests.cpp
backend/test/utility/: ConfigLoaderAccessor.hpp  LoggingTests.cpp  ValidatorsTests.cpp
hpcpm/: __init__.py
hpcpm/api/: __init__.py  app.py  main.py  version.py
hpcpm/api/helpers/: constants.py  database.py  requests.py  utils.py
hpcpm/api/resources/: ApiSpec.py
hpcpm/management/: api_requests.py  app.py  backend_requests.py  helpers.py  main.py  rules.py
management/: .gitignore  Makefile  dev_requirements.txt
management/hpcpm/management/: __init__.py  api_requests.py  backend_requests.py  main.py  rules.py  utils.py
management/tests/: test_main.py
public/: index.html
public/js/: DataService.js  DeviceStatsIntervalModalController.js  DeviceStatsShowController.js  EndpointsService.js  HomeControllers.js  NewNodeController.js  NodeDetailsController.js  NodeDetailsModalController.js  PowerLimitModalController.js  RemoveNodeController.js  RemovePowerLimitModalController.js  controllers.js
res/: backend.cfg  logging.cfg
src/: main.cpp
src/core/: ArgsParser.cpp  ArgsParser.hpp  Core.cpp  Core.hpp  Option.cpp  Option.hpp  ParserExceptions.hpp  Query.hpp  QueryExecutor.cpp  QueryExecutor.hpp
src/core/queries/: GetCurrentPowerUsageQuery.hpp  GetNodeInformationQuery.hpp  QueryFactory.hpp  SetPowerLimitPercentageQuery.hpp  SetPowerLimitQuery.hpp
src/core/query_handlers/: GetNodeInformationHandler.hpp  GetNodeInformationQueryHandler.hpp  GetPowerLimitConstraintsQueryHandler.hpp  GetPowerLimitPercentageQueryHandler.hpp  GetPowerLimitQueryHandler.hpp  QueryHandler.hpp  SetPowerLimitPercentageQueryHandler.hpp  SetPowerLimitQueryHandler.hpp
src/devices/: Device.hpp  DeviceInformation.hpp  DeviceNotFoundException.hpp  DevicesManager.cpp  DevicesManager.hpp
src/devices/IntelXeon/: IntelXeonCommunicationProvider.hpp  IntelXeonDevice.cpp  IntelXeonDevice.hpp  MPSSCommunicationProvider.cpp  MPSSCommunicationProvider.hpp  MockMPSSCommunicationProvider.hpp  MockNMPRKCommunicationProvider.hpp  NMPRKCommunicationProvider.cpp  NMPRKCommunicationProvider.hpp
src/devices/IntelXeonPhi/: IntelXeonPhiCommunicationProvider.hpp  IntelXeonPhiDevice.cpp  IntelXeonPhiDevice.hpp  MPSSCommunicationProvider.cpp  MPSSCommunicationProvider.hpp  MPSSPowerLimitHelper.cpp  MPSSPowerLimitHelper.hpp  MPSSProxy.cpp  MPSSProxy.hpp  MockMPSSCommunicationProvider.hpp  MockNPMRKCommunicationProvider.hpp  NPMRKCommunicationProvider.cpp  NPMRKCommunicationProvider.hpp
src/devices/NvidiaTesla/: MockNVMLCommunicationProvider.hpp  NVMLCommunicationProvider.cpp  NVMLCommunicationProvider.hpp  NVMLProxy.cpp  NVMLProxy.hpp  NvidiaTeslaCommunicationProvider.hpp  NvidiaTeslaDevice.cpp  NvidiaTeslaDevice.hpp
src/devices/OpenCL/: OpenCLCommunicationProvider.cpp  OpenCLCommunicationProvider.hpp  OpenCLProxy.hpp
src/network/: RequestListener.cpp  RequestListener.hpp  cpprest.hpp
src/network/request_hadlers/: GetDevicesListHandler.hpp  GetInfoFromDeviceHandler.cpp  GetInfoFromDeviceHandler.hpp  GetNodeInformationHandler.hpp  GetPowerLimitConstraintsHandler.hpp  GetPowerLimitHandler.hpp  GetPowerLimitPercentageHandler.hpp  Handler.cpp  Handler.hpp  SetDeviceParamHandler.cpp  SetDeviceParamHandler.hpp  SetPowerLimitHandler.hpp  SetPowerLimitPercentageHandler.hpp
src/utility/: ArgsParser.hpp  CircuralBuffer.hpp  ConfigLoader.cpp  ConfigLoader.hpp  Constants.hpp  Exceptions.cpp  Exceptions.hpp  Functional.cpp  Functional.hpp  InvalidKeyException.hpp  Logging.cpp  Logging.hpp  Option.hpp  ParserExceptions.hpp  RLLProxy.cpp  RLLProxy.hpp  Validators.cpp  Validators.hpp
test/: AllTests.cpp  BodyController.test.js  DataService.test.js  NodesController.test.js  RemoveNodeController.test.js  conf.js  ui-test.js
test/core/: ArgsParserTests.cpp  QueryExecutorTests.cpp
test/devices/: DevicesManagerTests.cpp  NvidiaTeslaTests.cpp
test/network/: CpprestTests.cpp  HandlersTests.cpp
test/network/request_handlers/: CommonHeader.hpp  GetDevicesListHandlerTests.cpp  GetInfoFromDeviceHandlerTests.cpp  GetPowerLimitConstraintsHandlerTests.cpp  GetPowerLimitHandlerTests.cpp  GetPowerLimitPercentageHandlerTests.cpp  HandlersTests.cpp  SetDeviceParamHandlerTests.cpp  SetPowerLimitHandlerTests.cpp  SetPowerLimitPercentageHandlerTests.cpp
test/utility/: ConfigLoaderTests.cpp  ExceptionsTests.cpp  FunctionalTests.cpp
test_e2e/: test.spec.js
test_e2e/pages/: hpcpm.page.js
tests/: test_app.py  test_main.py
ui/: Makefile  README.md  server.js
ui/public/: index.html
ui/public/js/: DeviceStatsIntervalModalController.js  DeviceStatsShowController.js  PowerLimitModalController.js  RemoveNodeController.js  RemovePowerLimitModalController.js
ui/test/: EndpointsService.test.js
ui/test_e2e/pages/: hpcpm.page.js
(+35 files in other folders)
